# fritzbox-mcp

./: .env.example  README.md  pyproject.toml  server.py
