[project]
name = "fritzbox-mcp"
version = "0.1.0"
description = "MCP server for Fritz!Box router management via Claude Code"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp[cli]>=1.2.0",
    "fritzconnection>=1.14.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
